changed the hidden function to gif-hidden to remove conflicts.

--- a/static/styles/module.css
+++ b/static/styles/module.css
@@ -34,7 +34,7 @@
   display: block;
 }
 
-.hidden {
+.gif-hidden {
   display: none;
 }
 
@@ -90,7 +90,7 @@
   bottom: 8px;
   left: 5px;
   height: 1.75rem;
-  width: 1.75rem;
+  width: auto;
   line-height: 1.5;
   font-size: 10px;
   font-weight: bold;
