--- a/static/styles/module.css
+++ b/static/styles/module.css
@@ -98,6 +98,31 @@
   cursor: pointer;
 }
 
+.gif-button--compact {
+  padding-right: 1.8em;
+}
+
+#chat-controls {
+  position: relative;
+}
+
+.chat-sidebar #chat-controls .roll-type-select {
+  flex-basis: auto;
+  width: 50%;
+  flex-grow: 7;
+}
+
+.chat-sidebar #chat-controls .control-buttons {
+  flex: unset;
+  display: flex;
+  justify-content: flex-end;
+}
+
+/* Make compact gif button compatible with df-chat-enhance replaced roll buttons */
+#chat-controls:has(.gif-button--compact) #dfcp-rt-buttons :is(.chat-archive, .export-log, .chat-flush) {
+  display: none;
+}
+
 #gifSearch > input::placeholder {
   /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: #ffffffd8;
